class8/k8s-old/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-db # to connect -> postgres-db.namespce.svc.cluster.local
  namespace: 3-tier-app-eks
  labels:
    service: database
spec:
  type: ExternalName
  externalName:  may25-dev-db.cvik8accw2tk.ap-south-1.rds.amazonaws.com
  ports:
  - port: 5432
